--- a/.drone.yml
+++ b/.drone.yml
@@ -7,3 +7,7 @@ steps:
   commands:
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn test -B
+  when:
+  event:
+  - push
+  - pull-request
